# iqualize

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Package.resolved  Package.swift  README.md  install.sh  project.yml
Sources/iQualize/: AudioEngine.swift  BiquadFilter.swift  CaptureClient.swift  ColorHex.swift  EQModels.swift  EQPreset.swift  EQWindowController.swift  HelpRenderer.swift  HelpWindowController.swift  Info.plist  MenuBarController.swift  OutputDeviceProfile.swift  SettingsWindowController.swift  iQualizeApp.swift
Sources/iQualize/DreamUI/: DreamViewModel.swift  EQReadoutGrid.swift  FilterTypePopUpButton.swift
linux/: flake.nix  package.json  vite.config.ts
linux/src/: app.css  app.html
linux/src-tauri/: Cargo.toml  tauri.conf.json
linux/src-tauri/capabilities/: default.json
linux/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
linux/src-tauri/src/audio/: mod.rs  pipewire_filter.rs
linux/src-tauri/src/dsp/: biquad.rs  fft.rs  limiter.rs  mod.rs  ring_buffer.rs  spectrum_data.rs
linux/src-tauri/src/state/: mod.rs  persistence.rs  presets.rs
linux/src/lib/components/: AudioControls.svelte  BandColumn.svelte  EQWindow.svelte  FrequencyResponse.svelte  PresetBar.svelte
linux/src/lib/stores/: audio.ts  presets.ts  spectrum.ts
linux/src/lib/utils/: biquad-response.ts  format.ts
linux/src/routes/: +page.svelte
macos/Sources/iQualize/: AudioEngine.swift  EQPreset.swift  Info.plist  SettingsWindowController.swift
