[package]
name = "iqualize-linux"
version = "0.1.0"
edition = "2021"
description = "iQualize — System-wide audio equalizer for Linux"

[lib]
name = "iqualize_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
rustfft = "6"
dirs = "6"
log = "0.4"
env_logger = "0.11"
pipewire = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
